<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <data>
        <variable
            name="viewModel"
            type="com.intcore.internship.livechat.ui.main.MainViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/connectivityStatusTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backgroundImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/messagesRV"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <LinearLayout
                    android:id="@+id/layout_chatbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:minHeight="48dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <EditText
                        android:id="@+id/enteredMessageET"
                        android:hint="@string/enter_message"
                        android:background="@android:color/transparent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:maxLines="6"/>

                    <Button
                        android:id="@+id/sendMessageBtn"
                        android:text="@string/send"
                        android:textSize="14sp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="64dp"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:layout_gravity="bottom" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/scrollToBottomLayout"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="64dp"
                    android:background="@drawable/white_cornered_layout"
                    android:gravity="center"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_down"
                        android:tint="@color/colorPrimary" />
                </LinearLayout>

                <TextView
                    android:id="@+id/newMessagesBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/white_cornered_tv"
                    android:text="@string/new_message_s"
                    android:padding="4dp"
                    android:drawableEnd="@drawable/baseline_keyboard_arrow_down_black_18"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toTopOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>